--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP: Firstname Lastname</title>
+	<title>WSP: Jonathon Polley</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
 
 	<!-- Header -->
-	
+	<header></header>
 	<!-- About -->	
 
 	<!-- Blog, Components -->
