--- a/index.html
+++ b/index.html
@@ -8,10 +8,79 @@
 <body>
 
 	<!-- Header -->
-	<header></header>
+	<header>Welcome To My page </header>
+    
 	<!-- About -->	
+<section id="about">
+
+		<h2>My Full Name </h2>
+        <h2>Jonathon S. Polley</h2>
+		<p> I'm 20 years old, I have a full-time job working 60 to 75 hours a week. </p>
+
+
+    </section>
 
 	<!-- Blog, Components -->
+<section>
+			<h1>Component Library</h1>
+	<article>
+	
+		<h2>1: Drop-down menu</h2>
+
+		<h3>What I Hope To Practice/Learn?</h3>
+		<p>In this class I hope that I will learn how to use the drop down menu correct and fast. </p>
+		<h3>How This Relates To What I Have/Will Learn In WDD.</h3>
+		<p>With this class I had founded out, what I was looking for and more from the correct HTML and CSS to go with it.  </p>
+		<a href="components/1/component.html" target="_blank"><button>View Component</button></a>
+
+	</article>
+	
+	<article>
+
+		<h2>2: Background CTA</h2>
+
+		<h3>What I Hope To Practice/Learn?</h3>
+		<p>I want to know how to make a slideshow for my background if a button on it.</p>
+		<h3>How This Relates To What I Have/Will Learn In WDD.</h3>
+		<p>From this class its like the same as the explain website or component.</p>
+		<a href="components/2/component.html" target="_blank"><button>View Component</button></a>
+	
+			
+	</article>
+	
+	<article>
+		<h2>3: Team Contact</h2>
+		<h3>What I Hope To Practice/Learn?</h3>
+		<p>I want a quick About us of team info section of a page. </p>
+		<h3>How This Relates To What I Have/Will Learn In WDD.</h3>
+		<p>I looked at the resources to hopefully find a good site that will help.</p>
+		<a href="components/3/component.html" target="_blank"><button>View Component</button></a>
+			
+	</article>
+	
+	<article>
+		<h2>4: Features List</h2>
+		<h3>What I Hope To Practice/Learn?</h3>
+		<p> A section the tells what is going on with you're website. I need to know work on making it clean/ flowing with the page.</p>
+		<h3>How This Relates To What I Have/Will Learn In WDD.</h3>
+		<p>I think in this class I can reach my goal on this topic.</p>
+		<a href="components/4/component.html" target="_blank"><button>View Component</button></a>
+	</article>
+
+
+	<article>
+		<h2>5: Footer</h2>
+		<h3>What I Hope To Practice/Learn?</h3>
+		<p>In this class I want to learn how to easily style the footer.</p>
+		<h3>How This Relates To What I Have/Will Learn In WDD.</h3>
+		<p>In this class I have been working on the fundamentals of coding.</p>
+		<a href="components/5/component.html" target="_blank"><button>View Component</button></a>
+	</article>
+
+</section>
+<footer>
+<p>JSP</p>
+</footer>
 
 
 </body>
